# saf

./: Cargo.toml  Justfile  LICENSE  README.md
__jobs/: demo.toml
sample_project/: lib.rs  main.rs
sample_project/actions/: mod.rs  my_action.rs
src/: cli.rs  lib.rs  main.rs
src/job_config_file/: job_config.rs  loading.rs  mod.rs
tests/: cli_test.rs  usage_test.rs
tests/__test_jobs/: test1.toml
tests/__test_jobs/subfo/: test2.toml
