[package]
name = "saf"
version = "0.1.0"
edition = "2021"
description = "Simple Action Framework, to easily run actions that implement a common trait."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
serde = { version = "1.0.183", features = ["derive"]  }
serde_json = "1.0.104"
walkdir = "2.3.3"
toml = "0.8.19"
minijinja = "2.1.2"
json_value_merge = "2.0.0"
enum_dispatch = "0.3.13"
